# ShellcodeLoader2025

./: LICENSE  README.md
cLoader/cDll/: CMakeLists.txt
cLoader/cDll/include/: aes.h  cLoader.h  cbc.h  decrypt.h  define.h  peb.h  syscall.h
cLoader/cDll/src/: cLoader.cpp  peb.asm  syscall.cpp
cLoader/cLoader/: CMakeLists.txt
cLoader/cLoader/include/: cLoader.h  define.h  peb.h  syscall.h
cLoader/cLoader/src/: aes.cpp  cLoader.cpp  cbc.cpp  decrypt.cpp  peb.cpp  syscall.cpp  syscall.x64.asm
docs/: README.md
pybuilder/pybuilder/: banner.py  compiler.py  encrypt.py  main.py  patch.py
